2007-06-18  Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (turn-on-mime-edit): Remove redundant comments and
	newlines to make the amount of diff-lines minimal to the original.

2007-06-08  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (turn-on-mime-edit): Don't use the default values
	of paragraph-start and paragraph-separate.  Suggested by Ron
	Isaacson <Ron.Isaacson@morganstanley.com>.  cf.
	http://article.gmane.org/gmane.mail.wanderlust.general.japanese/5721

2007-04-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-edit.el (turn-on-mime-edit): Make paragraph-start and
	paragraph-separate buffer-local.

2006-12-20  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Required environment): Update required
	version of APEL to 10.7 or later.

	* SEMI-CFG (PACKAGEDIR): Use
	`install-get-default-package-directory'.

2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-CFG (PACKAGEDIR): Avoid an error with Emacs.

2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-MK (compile-semi-package): Use
	batch-update-directory-autoloads if it is available instead of
	batch-update-directory.

2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* SEMI-CFG (PACKAGEDIR): Check for
	(early|late|last)-package-hierarchies and configure-package-path
	as well as (early|late|last)-packages.

2006-12-02  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mime-edit.el (mime-edit-process-multipart-1): Don't insert a
	text tag if a multipart end tag is followed.

2006-06-23  Hiroya Murata  <lapis-lazuli@pop06.odn.ne.jp>

	* mime-view.el (mime-calist::field-match-method-ignore-case):
	New function; set up for `field-match-method' of calist.

2006-03-28  Daiki Ueno  <ueno@unixuser.org>

	* mime-edit.el (mime-edit-sign-pgp-mime): Set pgg-text-mode.
	(mime-edit-encrypt-pgp-mime): Ditto.

2006-02-18  TAKAHASHI Kaoru  <kaoru@kaisei.org>

	* mime-edit.el (mime-edit-delete-trailing-whitespace): New
	Function for RFC3156.
	(mime-edit-sign-pgp-mime): Use it.
