@@ -1,3 +1,8 @@
+2010-01-19  Vitaly Mayatskikh  <v.mayatskih@gmail.com>
+	* mime-view.el (toplevel): New defcustom: mime-view-buttons-visible
+	* mime-view.el (mime-display-entity): Use mime-view-buttons-visible
+	to control visibility of MIME buttons.
+
 2007-06-18  Daiki Ueno  <ueno@unixuser.org>
 
 	* mime-edit.el (turn-on-mime-edit): Remove redundant comments and
